Fix contrast ratio of primary color

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,7 +15,7 @@
 	--bg-alt: #fff;
 	--fg: #444;
 	--fg-alt: #222;
-	--primary: #3370ce;
+	--primary: #306cc4;
 	--primary-alt: #185dc7;
 	--primary-light: rgba(44, 93, 206, 0.1);
   --container-shadow: 0 2px 4px rgb(0 0 0 / 10%);
